--- a/rdap_client/Cargo.toml
+++ b/rdap_client/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
-name = "rdap_client"
-version = "0.3.0"
-authors = ["Jakub Onderka <jakub.onderka@gmail.cz>"]
+name = "test_friendly_rdap_client"
+version = "0.1.0"
+authors = ["Rory McKinley <rorymckinley@gmail.com>"]
 license = "BSD-2-Clause"
 keywords = ["rdap", "whois"]
 categories = ["network-programming", "parsing", "data-structures"]
 readme = "../README.md"
-repository = "https://github.com/JakubOnderka/rdap_client"
-homepage = "https://github.com/JakubOnderka/rdap_client"
-documentation = "https://docs.rs/rdap_client"
+repository = "https://github.com/rorymckinley/test_friendly_rdap_client.git"
+homepage = "https://github.com/rorymckinley/test_friendly_rdap_client.git"
+documentation = "https://docs.rs/test_friendly_rdap_client"
 description = """
-Async and fast RDAP client and parser.
+A fork of the rdap_client crate, with some extra test plumbing.
 """
 edition = "2021"
 rust-version = "1.56"
