Copy across rdap_types

--- a/rdap_client/Cargo.toml
+++ b/rdap_client/Cargo.toml
@@ -27,8 +27,8 @@ ip_network = { version = "0.4.0", features = ["serde"] }
 ip_network_table = "0.2.0"
 chrono = { version = "0.4.10", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_with = "2.0.0"
 serde_json = "1.0"
-rdap_types = { path = "../rdap_types", version = "0.1.0" }
 url = "2.3.1"
 
 [dev-dependencies]
