--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,39 @@
-[workspace]
-members = [
-    "rdap_client",
-]
+[package]
+name = "test_friendly_rdap_client"
+version = "0.1.0"
+authors = ["Rory McKinley <rorymckinley@gmail.com>"]
+license = "BSD-2-Clause"
+keywords = ["rdap", "whois"]
+categories = ["network-programming", "parsing", "data-structures"]
+readme = "../README.md"
+repository = "https://github.com/rorymckinley/test_friendly_rdap_client.git"
+homepage = "https://github.com/rorymckinley/test_friendly_rdap_client.git"
+documentation = "https://docs.rs/test_friendly_rdap_client"
+description = """
+A fork of the rdap_client crate, with some extra test plumbing.
+"""
+edition = "2021"
+rust-version = "1.56"
+exclude = [".travis.yml", "test_data/*"]
+
+[badges]
+maintenance = { status = "actively-developed" }
+
+[dependencies]
+reqwest = { version = "0.11.0", features = ["json", "gzip"] }
+bytes = "1.0"
+futures = "0.3.1"
+ip_network = { version = "0.4.0", features = ["serde"] }
+ip_network_table = "0.2.0"
+chrono = { version = "0.4.10", features = ["serde"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_with = "2.0.0"
+serde_json = "1.0"
+url = "2.3.1"
+
+[dev-dependencies]
+criterion = "0.4"
+
+[[bench]]
+name = "benchmark"
+harness = false
