--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Rory McKinley <rorymckinley@gmail.com>"]
 license = "BSD-2-Clause"
 keywords = ["rdap", "whois"]
 categories = ["network-programming", "parsing", "data-structures"]
-readme = "../README.md"
+readme = "README.md"
 repository = "https://github.com/rorymckinley/test_friendly_rdap_client.git"
 homepage = "https://github.com/rorymckinley/test_friendly_rdap_client.git"
 documentation = "https://docs.rs/test_friendly_rdap_client"
